# unn-python-2022

./: README.md
homeworks/Namxobick/2/class-Array/: README.md
homeworks/Namxobick/3/: README.md
homeworks/Namxobick/5/my-awesome-script/: README.md
homeworks/Namxobick/6/data-parser/: README.md
homeworks/Namxobick/7/asyncio-data-parser/: README.md
practice/3/SimultaneousRequests/: pyproject.toml
practice/3/SimultaneousRequests/simultaneousrequests/: asyncio_.py  multiprocessing_.py  single_threaded.py  threading_.py
practice/3/simultaneous-requests/: README.md
practice/3/simultaneous-requests/simultaneousrequests/: __main__.py  thread_pool_executor.py
